# Learning-Rust-Web

./: .gitignore  LICENSE  README.md
chapters/: authentication.md  caching.md  email_verification.md  integration_tests.md  loose_coupling.md  macros.md  pagination.md  rest-api.md  sorting_and_filtering.md  web_framework.md  why_rust.md
source/authentication/: .env  Cargo.toml  Makefile
source/authentication/migrations/2020-05-17-033533_create_user/: down.sql  up.sql
source/authentication/src/: api_error.rs  main.rs
source/authentication/src/auth/: routes.rs
source/authentication/src/user/: mod.rs  routes.rs
source/caching/: Cargo.toml
source/caching/src/: api_error.rs  cache.rs  main.rs
source/caching/src/db/: macros.rs  paginate.rs
source/caching/src/email/: api.rs
source/caching/src/user/: mod.rs  model.rs
source/chapter4/rest_api/: Cargo.toml
source/chapter4/rest_api/src/: api_error.rs  main.rs
source/email_verification/migrations/2020-05-18-235525_email_verification_token/: up.sql
source/email_verification/src/auth/: mod.rs  routes.rs
source/email_verification/src/user/: model.rs
source/integration-tests/: .env  Cargo.toml
source/integration-tests/src/: main.rs  test.rs
source/integration-tests/src/db/: mod.rs
source/integration-tests/src/user/: mod.rs  model.rs  tests.rs
source/macros/: .env  Cargo.toml
source/macros/src/: main.rs
source/macros/src/email_verification_token/: mod.rs
source/rest_api/: .env  Cargo.toml
source/sorting-and-filtering/: Cargo.toml
source/sorting-and-filtering/src/: api_error.rs
(+12 files in other folders)
