[package]
name = "authentication"
version = "0.1.0"
authors = ["chapin <chapin@class100.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.0"
listenfd = "0.3.3"
dotenv = "0.15.0"
log = "0.4.8"
env_logger = "0.7.1"
serde = "1.0.106"
serde_json = "1.0.51"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "1.4"
lazy_static = "1.4"
r2d2 = "0.8"
uuid = { version = "0.6", features = ["serde", "v4"] }
rand = "0.7.3"
rust-argon2 = "0.8.2"
actix-redis = "0.8.2"
actix-session = "0.3.0"
